--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --aot --proxy-config proxy.json",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -11,7 +11,8 @@
     "compile:server": "webpack --config webpack.server.config.js --progress --colors",
     "serve:ssr": "node dist/server",
     "build:ssr": "npm run build:client-and-server-bundles && npm run compile:server",
-    "build:client-and-server-bundles": "ng build --prod && ng run ng-uni-app:server:production --bundleDependencies all"
+    "build:client-and-server-bundles": "ng build --prod && ng run ng-uni-app:server:production --bundleDependencies all",
+    "start:server": "./node_modules/.bin/ts-node -P ./tsconfig.server.json  server.ts"
   },
   "private": true,
   "dependencies": {
