--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -2,12 +2,15 @@
   "extends": "./tsconfig.app.json",
   "compilerOptions": {
     "outDir": "./out-tsc/app-server",
-    "module": "commonjs"
+    "target": "es2016"
   },
   "files": [
     "src/main.server.ts"
   ],
   "angularCompilerOptions": {
     "entryModule": "./src/app/app.server.module#AppServerModule"
-  }
+  },
+  "include": [
+    "src/**/*.d.ts"
+  ]
 }
