EventListener and DispatchEvent to a component

--- a/angular.json
+++ b/angular.json
@@ -128,7 +128,7 @@
           "builder": "@angular-devkit/build-angular:server",
           "options": {
             "outputPath": "dist/server",
-            "main": "src/main.server.ts",
+            "main": "server.ts",
             "tsConfig": "tsconfig.server.json"
           },
           "configurations": {
@@ -142,6 +142,32 @@
               "sourceMap": false,
               "optimization": true
             }
+          }
+        },
+        "serve-ssr": {
+          "builder": "@nguniversal/builders:ssr-dev-server",
+          "options": {
+            "browserTarget": "ng-uni-app:build",
+            "serverTarget": "ng-uni-app:server"
+          },
+          "configurations": {
+            "production": {
+              "browserTarget": "ng-uni-app:build:production",
+              "serverTarget": "ng-uni-app:server:production"
+            }
+          }
+        },
+        "prerender": {
+          "builder": "@nguniversal/builders:prerender",
+          "options": {
+            "browserTarget": "ng-uni-app:build:production",
+            "serverTarget": "ng-uni-app:server:production",
+            "routes": [
+              "/"
+            ]
+          },
+          "configurations": {
+            "production": {}
           }
         }
       }
