--- a/package.json
+++ b/package.json
@@ -9,24 +9,26 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "compile:server": "webpack --config webpack.server.config.js --progress --colors",
-    "serve:ssr": "node dist/server",
-    "build:ssr": "npm run build:client-and-server-bundles && npm run compile:server",
+    "serve:ssr": "node dist/server/main.js",
+    "build:ssr": "ng build --prod && ng run ng-uni-app:server:production",
     "build:client-and-server-bundles": "ng build --prod && ng run ng-uni-app:server:production --bundleDependencies all",
-    "start:server": "./node_modules/.bin/ts-node -P ./tsconfig.server.json  server.ts"
+    "start:server": "./node_modules/.bin/ts-node -P ./tsconfig.server.json  server.ts",
+    "dev:ssr": "ng run ng-uni-app:serve-ssr",
+    "prerender": "ng run ng-uni-app:prerender"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.2.1",
+    "@angular/animations": "^10.2.2",
     "@angular/cdk": "~8.2.3",
-    "@angular/common": "~10.2.1",
-    "@angular/compiler": "~10.2.1",
-    "@angular/core": "~10.2.1",
-    "@angular/forms": "~10.2.1",
+    "@angular/common": "^10.2.2",
+    "@angular/compiler": "^10.2.2",
+    "@angular/core": "^10.2.2",
+    "@angular/forms": "^10.2.2",
     "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "~10.2.1",
-    "@angular/platform-browser-dynamic": "~10.2.1",
-    "@angular/platform-server": "~10.2.1",
-    "@angular/router": "~10.2.1",
+    "@angular/platform-browser": "^10.2.2",
+    "@angular/platform-browser-dynamic": "^10.2.2",
+    "@angular/platform-server": "^10.2.2",
+    "@angular/router": "^10.2.2",
     "@nguniversal/express-engine": "^10.1.0",
     "express": "^4.15.2",
     "hammerjs": "^2.0.8",
@@ -37,12 +39,13 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1002.0",
     "@angular/cli": "~10.2.0",
-    "@angular/compiler-cli": "~10.2.1",
-    "@angular/language-service": "~10.2.1",
+    "@angular/compiler-cli": "^10.2.2",
+    "@angular/language-service": "^10.2.2",
+    "@nguniversal/builders": "^10.1.0",
     "@types/express": "^4.17.0",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
